Combobox Pattern: Editorial refinement of description

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -494,12 +494,13 @@
         <a href="#grid">grid</a>, 
         <a href="#TreeView">tree</a>, or 
         <a href="#dialog_modal">dialog.</a>
+        Many implementations also include a third optional element -- a graphical button adjacent to the textbox, indicating the availability of the popup. 
+        Activating the button displays the popup if suggestions are available.
       </p>
       <p>
-        The popup is hidden by default, and its availability is often indicated by a graphical button, such as a downward pointing arrow, adjacent to the textbox.
-        The conditions that trigger display of the popup are specific to each implementation. 
-        For example, some implementations do not display suggested values for the textbox in the popup until several characters are typed in the text box, 
-        while in other implementations, the popup is displayed when the textbox receives focus.
+        The popup is hidden by default, and the conditions that trigger its display are specific to each implementation.
+        For example, some implementations do not display suggested values for the textbox in the popup until several characters are typed in the text box.
+        While in other implementations, the popup is displayed when the textbox receives focus.
       </p>
       <p>Combobox widgets are useful for setting the value of a single-line textbox in one of two types of scenarios:</p>
       <ol>
