Combobox Pattern: Minor editorial correction to description

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -546,7 +546,7 @@
       <p>
         When providing a compact widget that asks users to choose one value from a known set of discrete values, often either a <a href="#Listbox">listbox</a> or <a href="#menubutton">menu button</a> is simpler to implement and use.
         One feature of combobox that distinguishes it from both listbox and menu button is that the value of the combobox is presented in an edit field. 
-        Thus, the combobox gives users one function that the listbox lacks, namely the ability to select some or all of the value for copying to the clipboard.
+        Thus, the combobox gives users one function that both listbox and menu button lack, namely the ability to select some or all of the value for copying to the clipboard.
       </p>
       <p class="note">
         The options for a combobox to popup a grid, tree, or dialog were introduced in ARIA 1.1.
