Combobox Pattern: Complete first draft

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -621,12 +621,16 @@
           </li>
           <li>Any printable character: Returns the focus to the textbox without closing the popup and types the character.</li>
           <li><kbd>Backspace</kbd> (Optional): Returns focus to the textbox and deletes the character prior to the cursor.</li>
-          <li><kbd>Delete</kbd> (Optional): Returns focus to the textbox and removes the inline autocomplete string if present.</li>
+          <li><kbd>Delete</kbd> (Optional): Returns focus to the textbox, removes the selected state if a suggestion was selected, and removes the inline autocomplete string if present.</li>
           <li><kbd>Down Arrow</kbd>: Moves focus to and selects the next option. If focus is on the last option, either returns focus to the textbox or does nothing.</li>
           <li><kbd>Up Arrow</kbd>: Moves focus to and selects the previous option. If focus is on the first option, either returns focus to the textbox or does nothing.</li>
           <li><kbd>Home</kbd> (Optional): Either moves focus to and selects the first option or returns focus to the textbox and places the cursor on the first character.</li>
           <li><kbd>End</kbd> (Optional): Either moves focus to the last option or returns focus to the textbox and places the cursor after the last character.</li>
         </ul>
+        <ol class="note">
+          <li>DOM Focus is maintained on the combobox textbox and the assistive technology focus is moved within the grid using <code>aria-activedescendant</code> as described in <a href="#"kbd_focus_activedescendant">Managing Focus in Composites Using aria-activedescendant.</a></li>
+          <li>Selection follows focus in the listbox; the listbox allows only one suggested value to be selected at a time for the textbox value.</li>
+        </ol>
         <h5>Grid Popup Keyboard Interaction</h5>
         <p>
           In a grid popup, each suggested value may be represented by either a single cell or an entire row.
@@ -680,7 +684,8 @@
           <li><kbd>Control + End</kbd> (Optional): moves focus to the last row.</li>
         </ul>
         <ol class="note">
-          <li>DOM Focus is maintained on the combobox textbox and the assistive technology focus is moved within the grid using aria-activedescendant as described in <a href="#"kbd_focus_activedescendant">Managing Focus in Composites Using aria-activedescendant.</a></li>
+          <li>DOM Focus is maintained on the combobox textbox and the assistive technology focus is moved within the grid using <code>aria-activedescendant</code> as described in <a href="#"kbd_focus_activedescendant">Managing Focus in Composites Using aria-activedescendant.</a></li>
+          <li>The grid allows only one suggested value to be selected at a time for the textbox value.</li>
           <li>In a grid popup, each suggested value may be represented by either a single cell or an entire row. This aspect of design effects focus and selection movement:
             <ol>
               <li>If every cell contains a different suggested value:
@@ -691,23 +696,150 @@
                 </ul>
               </li>
               <li>If all cells in a row contain information about the same suggested value:
-                <ol>
+                <ul>
                   <li>Either the row containing focus is selected or a cell containing a suggested value is selected when any cell in the same row contains focus.</li>
                   <li>Horizontal key navigation may wrap from one row to another.</li>
                   <li>Vertical arrow key navigation <strong>does not</strong> wrap from one column to another.</li>
-                </ol>
+                </ul>
               </li>
             </ol>
           </li>
         </ol>
         <h5>Tree Popup Keyboard Interaction</h5>
-        <p>When focus is in a tree popup:</p>
+        <p>
+          In some implementations of tree popups, some or all parent nodes may serve as suggestion category labels so may not be selectable values.
+          See notes below for how this aspect of the design effects the way selection moves in response to focus movements.
+        </p>
+        <p>When focus is in a vertically oriented tree popup:</p>
+        <ul>
+          <li><kbd>Enter</kbd>: Accepts the currently selected suggested value by closing the popup and placing the selected value in the textbox with the input cursor at the end of the value.</li>
+          <li><kbd>Escape</kbd>: Closes the popup and returns focus to the textbox. Optionally, clears the contents of the textbox.</li>
+          <li>Any printable character: Returns the focus to the textbox without closing the popup and types the character.</li>
+          <li><kbd>Right arrow</kbd>:
+            <ul>
+              <li>When focus is on a closed node, opens the node; focus and selection do not move.</li>
+              <li>When focus is on a open node, moves focus to the first child node and selects it if it is selectable.</li>
+              <li>When focus is on an end node, does nothing.</li>
+            </ul>
+           </li>
+          <li><kbd>Left arrow</kbd>:
+            <ul>
+              <li>When focus is on an open node, closes the node.</li>
+              <li>When focus is on a child node that is also either an end node or a closed node, moves focus to its parent node and selects it if it is selectable.</li>
+              <li>When focus is on a root node that is also either an end node or a closed node, does nothing.</li>
+            </ul>
+           </li>
+          <li><kbd>Down Arrow</kbd>: Moves focus to the next node that is focusable without opening or closing a node and selects it if it is selectable.</li>
+          <li><kbd>Up Arrow</kbd>: Moves focus to the previous node that is focusable without opening or closing a node and selects it if it is selectable.</li>
+          <li><kbd>Home</kbd>: Moves focus to the first node in the tree without opening or closing a node and selects it if it is selectable.</li>
+          <li><kbd>End</kbd>: Moves focus to the last node in the tree that is focusable without opening a node and selects it if it is selectable.</li>
+        </ul>
+        <ol class="note">
+        <li>DOM Focus is maintained on the combobox textbox and the assistive technology focus is moved within the tree using <code>aria-activedescendant</code> as described in <a href="#"kbd_focus_activedescendant">Managing Focus in Composites Using aria-activedescendant.</a></li>
+        <li>The tree allows only one suggested value to be selected at a time for the textbox value.</li>
+          <li>
+            In a tree popup, some or all parent nodes may not be selectable values; they may serve as category labels for suggested values.
+            If focus moves to a node that is not a selectable value, either:
+            <ul>
+              <li>The previously selected node, if any, remains selected until focus moves to a node that is selectable.</li>
+              <li>There is no selected value.</li>
+              <li>In either case, focus is fisually distinct from selection so users can readily see if a value is selected or not.</li> 
+            </ul>
+        </li>
+          <li>If the nodes in a tree are arranged horizontally:
+            <ol>
+              <li><kbd>Down Arrow</kbd> performs as <kbd>Right Arrow</kbd> is described above, and vice versa.</li>
+              <li><kbd>Up Arrow</kbd> performs as <kbd>Left Arrow</kbd> is described above, and vice versa.</li>
+            </ol>
+          </li>
+        </ol>
         <h5>Dialog Popup Keyboard Interaction</h5>
         <p>When focus is in a dialog popup:</p>
+        <ul>
+          <li>There are two ways to close the popup and return focus to the textbox:
+            <ol>
+              <li>Perform an action in the dialog, such as activate a button, that specifies a value for the textbox.</li>
+              <li>
+                Cancel out of the dialog, e.g., press <kbd>Escape</kbd> or activate the cancel button in the dialog. 
+                Canceling either returns focus to the text box without changing the textbox value or returns focus to the textbox and clears the textbox.
+              </li>
+            </ol>
+          </li>
+          <li>The dialog implements the keyboard interaction defined in the <a href="#dialog_modal">modal dialog pattern.</a></li>
+        </ul>
+        <p class="note">
+          Unlike other combobox popups, dialogs do not support <code>aria-activedescendant</code> so DOM focus moves into the dialog from the textbox.
+        </p>
       </section>
 
       <section class="notoc">
         <h4>WAI-ARIA Roles, States, and Properties</h4>
+        <p>
+          The role, state, and property guidance where the ARIA 1.1 and ARIA 1.0 patterns differ is listed first.
+          The subsequent guidance applies to both patterns.
+        </p>
+        <ul>
+          <li>In a combobox implementing the ARIA 1.1 pattern:
+            <ul>
+              <li>The element that serves as the combobox container has role <a href="#combobox" class="role-reference">combobox</a>.</li>
+              <li>The element with role <code>combobox</code> contains or owns a textbox element that has either role <a href="#textbox" class="role-reference">textbox</a> or role <a href="#searchbox" class="role-reference">searchbox</a>.</li>
+              <li>When the combobox popup is visible, the combobox element contains or owns an element that has role <a href="#listbox" class="role-reference">listbox</a>, <a href="#tree" class="role-reference">tree</a>, <a href="#grid" class="role-reference">grid</a>, or <a href="#dialog" class="role-reference">dialog</a>.</li>
+              <li>
+                If the combobox popup has a role other than <code>listbox</code>, the element with role <code>combobox</code> has <a href="#aria-haspopup" class="property-reference">aria-haspopup</a> set to a value that corresponds to the popup type.
+                That is, <code>aria-haspopup</code> is set to <code>grid</code>, <code>tree</code>, or <code>dialog</code>. 
+                Note that elements with role <code>combobox</code> have an implicit <code>aria-haspopup</code> value of <code>listbox</code>.
+              </li>
+              <li>When the combobox popup is visible, the textbox element has <a href="#aria-controls" class="property-reference">aria-controls</a> set to a value that refers to the combobox popup element.</li>
+            </ul>
+          </li>
+          <li>In a combobox implementing the ARIA 1.0 pattern:
+            <ul>
+              <li>The element that serves as the textbox has role <a href="#combobox" class="role-reference">combobox</a>.</li>
+              <li>When the combobox popup is visible, the element with role combobox has <a href="#aria-owns" class="property-reference">aria-owns</a> set to a value that refers to an element with role <a href="#listbox" class="role-reference">listbox</a>.
+              <li>
+                the element with role <code>combobox</code> has a value for <a href="#aria-haspopup" class="property-reference">aria-haspopup</a> of <code>listbox</code>.
+                Note that elements with role <code>combobox</code> have an implicit <code>aria-haspopup</code> value of <code>listbox</code>.
+              </li>
+            </ul>
+          </li>
+          <li>
+            The textbox element has  a value for <a href="#aria-multiline" class="property-reference">aria-multiline</a> of <code>false</code>. 
+            Note that the default value of <code>aria-multiline</code> is <code>false</code>.
+          </li>
+          <li>
+            When the combobox popup is not visible, the element with role <code>combobox</code> has <a href="#aria-expanded" class="state-reference">aria-expanded</a> set to <code>false</code>. 
+            When the popup element is visible, <code>aria-expanded</code> is set to <code>true</code>. 
+            Note that Elements with role <code>combobox</code> have a default value for <code>aria-expanded</code> of <code>false</code>.
+          </li>
+          <li>When a combobox receives focus, DOM focus is placed on the textbox element.</li>
+          <li>When a descendant of  a listbox, grid, or tree popup is focused, DOM focus remains on the textbox and the textbox has <a href="#aria-activedescendant" class="property-reference">aria-activedescendant</a> set to a value that refers to the focused element within the popup.</li>
+          <li>In a combobox with a listbox, grid, or tree popup, when a suggested value is visually indicated as the currently selected value, the <code>option</code>, <code>gridcell</code>, <code>row</code>, or <code>treeitem</code> containing that value has <a href="#aria-selected" class="state-reference">aria-selected</a> set to <code>true</code>.</li>
+          <li>
+            If the combobox has a visible label, the element with role combobox has <a href="#aria-labelledby" class="property-reference">aria-labelledby</a> set to a value that refers to the labeling element.
+            Otherwise, the combobox element has a label provided by <a href="#aria-label" class="property-reference">aria-label</a>.
+          </li>
+          <li>The textbox element has <a href="#aria-autocomplete" class="property-reference">aria-autocomplete</a> set to a value that corresponds to its autocomplete behavior:
+            <ul>
+              <li><code>none</code>: When the popup is displayed, the suggested values it contains are the same regardless of the characters typed in the textbox.</li>
+              <li><code>list</code>: When the popup is triggered, it presents suggested values that complete or logically correspond to the characters typed in the textbox.</li>
+              <li>
+                <code>both</code>: When the popup is triggered, it presents suggested values that complete or logically correspond to the characters typed in the textbox.
+                In addition, the portion of the selected suggestion that has not been typed by the user, a completion string, appears inline after the input cursor in the textbox. 
+                The inline completion string is visually highlighted and has a selected state.
+              </li>
+            </ul>
+          </li>
+        </ul>
+        <p class="note">
+          The roles, states, and properties for popup elements are defined in their respective design patterns. 
+          When refering to the following design patterns, note that a combobox is a single-select widget where selection follows focus in the popup.
+        </p>
+        <ul>
+          <li><a href="#listbox_roles_states_props">Listbox Roles, States, and Properties</a></li>
+          <li><a href="#grid_roles_states_props">Grid Roles, States, and Properties</a></li>
+          <li><a href="#tree_roles_states_props">Tree Roles, States, and Properties</a></li>
+          <li><a href="#dialog_roles_states_props">Dialog Roles, States, and Properties</a></li>
+        </ul>
       </section>
     </section>
 
@@ -794,7 +926,7 @@
         </ol>
       </section>
 
-      <section class="notoc">
+      <section id="dialog_roles_states_props" class="notoc">
         <h4>WAI-ARIA Roles, States, and Properties</h4>
         <ul>
           <li>The element that serves as the dialog container has a role of <a href="#dialog" class="role-reference">dialog</a>.</li>
@@ -1334,7 +1466,7 @@
         </section>
       </section>
 
-      <section class="notoc">
+      <section id="grid_roles_states_props" class="notoc">
         <h4>WAI-ARIA Roles, States, and Properties</h4>
         <ul>
           <li>The grid container has role <a href="#grid" class="role-reference">grid</a>. </li>
@@ -1419,7 +1551,6 @@
 
     <section class="widget" id="Listbox">
       <h3>Listbox</h3>
-
       <p>
         A <a href="#listbox" class="role-reference">listbox</a> widget presents a list of options and allows a user to select one or more of them.
         A listbox that allows a single option to be chosen is a single-select listbox; one that allows multiple options to be selected is a multi-select listbox.
@@ -1534,7 +1665,7 @@
         </ol>
       </section>
 
-      <section class="notoc">
+      <section id="listbox_roles_states_props" class="notoc">
         <h4>WAI-ARIA Roles, States, and Properties</h4>
         <ul>
           <li>An element that contains or owns all the listbox options has role <a href="#listbox" class="role-reference">listbox</a>.</li>
@@ -2448,7 +2579,7 @@
         </ol>
       </section>
 
-      <section class="notoc">
+      <section id="tree_roles_states_props" class="notoc">
         <h4>WAI-ARIA Roles, States, and Properties</h4>
         <ul>
           <li>All tree nodes are contained in or owned by an element with role <a class="role-reference" href="#tree">tree</a>.</li>
