Combobox Pattern: Add link to review issue 464

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -486,7 +486,10 @@
 
     <section class="widget" id="combobox">
       <h3>Combo Box</h3>
-      <p><strong>NOTE:</strong> Work on drafting this section is in progress and tracked by <a href="https://github.com/w3c/aria-practices/issues/31">issue 31</a>. </p>
+      <p>
+        <strong>NOTE:</strong> This section contains new content. Please provide feedback in
+        <a href="https://github.com/w3c/aria-practices/issues/464">issue 464.</a>
+      </p>
       <p>
         A <a href="#combobox" class="role-reference">combobox</a> is a widget made up of the combination of two distinct elements: 
         1) a single-line textbox, and 2) an associated pop-up element for helping users set the value of the textbox.
